# VibeCollab

./: .gitignore  .gitmodules  CONTRIBUTING_AI.md  LICENSE  README.md  README.pypi.md  README.zh-CN.md  USAGE.md  _ls.txt  _rm.txt  _run_tests.py  check_output.txt  check_protocol.py  cov_report.txt  init_project.py  llm.txt  llm_example.txt  llms.txt  original_developer.py  project.yaml  project.yaml.broken  pyproject.toml  skill.md  test_dashboard.py  test_final.txt  test_out.txt  test_out2.txt  test_output.txt  test_result.txt  test_results.txt
.cline/: mcp_settings.json
.codebuddy/rules/: secrets-handling.mdc  vibecollab-protocol.mdc
.codebuddy/skills/llmtxt/: SKILL.md
.cursor/: mcp.json
.cursor/rules/: vibecollab.mdc
.cursor/skills/llmtxt/: SKILL.md
.cursor/skills/vibecollab/: SKILL.md
.github/workflows/: ci.yml  publish.yml  simple-release.yml
.openclaw/: README.md  SKILL.md
.openclaw/skills/: README.md
.openclaw/skills/vibecollab/: README.md  SKILL.md
.opencode/skills/: vibecollab.md
.vibecollab/: .gitignore  insight_signal.json  tasks.json
.vibecollab/docs/: changelog.yaml  context.yaml  decisions.yaml  prd.yaml  roadmap.yaml
.vibecollab/insights/: INS-001.yaml  INS-002.yaml  INS-003.yaml  INS-004.yaml  INS-005.yaml  INS-006.yaml  INS-007.yaml  INS-008.yaml  INS-009.yaml  INS-010.yaml  INS-011.yaml  INS-012.yaml  INS-013.yaml  INS-014.yaml  INS-015.yaml  INS-016.yaml  INS-017.yaml  INS-018.yaml  INS-019.yaml  INS-020.yaml  INS-021.yaml  INS-022.yaml  INS-023.yaml  INS-024.yaml  INS-025.yaml  INS-026.yaml  INS-027.yaml  INS-028.yaml  INS-029.yaml  INS-030.yaml  INS-035.yaml  INS-036.yaml  INS-037.yaml  INS-038.yaml  INS-039.yaml  INS-040.yaml  INS-041.yaml  INS-042.yaml  INS-043.yaml  INS-044.yaml  (+24 more)
.vibecollab/plan_state/: qa-test.json
.vibecollab/roles/: COLLABORATION.md
.vibecollab/roles/architect/: context.yaml
.vibecollab/roles/dev/: .metadata.yaml  CONTEXT.md
.vibecollab/roles/insight_collector/: .metadata.yaml  context.yaml
.vibecollab/runtime/: workflow_snapshot.json
.vibecollab/sessions/: 2026-04-01T06-35-18.json
.vibecollab/workflows/: daily-sync.yaml  insight-collect.yaml  qa-test.yaml  release-prep.yaml
docs/: ARCHITECTURE_QA.md  CHANGELOG.md  CONTEXT.md  DECISIONS.md  DEVELOPERS.md  LIFECYCLE_DESIGN.md  PRD.md  QA_TEST_CASES.md  ROADMAP.md  TEST_VALIDATION.md  USER_GUIDE_v080.md  changelog.yaml  context.yaml  decisions.yaml  qa.yaml  roadmap.yaml  v0.12.0-migration-guide.md
docs/developers/: COLLABORATION.md
docs/developers/alice/: .metadata.yaml  CONTEXT.md
docs/developers/dev/: CONTEXT.md
docs/developers/insight_congtainer/: CONTEXT.md
docs/developers/jarvis01/: .metadata.yaml  CONTEXT.md  PROGRESS_REPORTS.md
docs/developers/ocarina/: .metadata.yaml  CONTEXT.md
docs/guides/: DASHBOARD_USAGE.md
docs/planning/: ITERATION_STRATEGY.md  REQ-VIBECOLLAB-PLAN-ENHANCEMENT.md
docs/roles/architect/: .metadata.yaml  CONTEXT.md  context.yaml
docs/roles/dev/: CONTEXT.md  context.yaml
docs/roles/insight_collector/: CONTEXT.md  context.yaml
docs/roles/ocarina/: .metadata.yaml  CONTEXT.md
examples/: demo_bootstrap.yaml  demo_loop.yaml  mock_host.py
generator/: llm_txt_generator.py
schema/: changelog.schema.yaml  context.schema.yaml  decisions.schema.yaml  extension.schema.yaml  insight.schema.yaml  prd.schema.yaml  project.schema.yaml  qa.schema.yaml  roadmap.schema.yaml
scripts/: _commit2.bat  bump_version.py  migrate_to_roles.py  prepare-commit-msg.example
src/llmcontext/: llmstxt.py
src/llmtxt/: __init__.py  cli.py  extension.py  generator.py  project.py  templates.py
src/llmtxt/templates/: default.project.yaml
src/vibecollab/: __init__.py  _compat.py  agent_executor.py  cli.py  cli_ai.py  cli_config.py  cli_guide.py  cli_index.py  cli_insight.py  cli_lifecycle.py  cli_mcp.py  cli_roadmap.py  cli_rules.py  cli_task.py  config_manager.py  conflict_detector.py  developer.py  embedder.py  event_log.py  extension.py  generator.py  git_utils.py  health.py  ide_platforms.py  indexer.py  insight_collection.py  insight_manager.py  insight_signal.py  lifecycle.py  llm_client.py  llmstxt.py  mcp_server.py  pattern_engine.py  prd_manager.py  profile.py  profile_manager.py  project.py  project_adapter.py  protocol_checker.py  roadmap_parser.py  (+4 more)
src/vibecollab/agent/: __init__.py  executor.py  llm_client.py  mcp_server.py
src/vibecollab/cli/: __init__.py  ai.py  config.py  guide.py  index.py  insight.py  lifecycle.py  main.py  mcp.py  roadmap.py  skill.py  task.py
src/vibecollab/contrib/: __init__.py  auto_driver.py
src/vibecollab/core/: __init__.py  docs_renderer.py  execution_plan.py  extension.py  generator.py  health.py  pattern_engine.py  pipeline.py  project.py  protocol_checker.py  template_library.py  templates.py  workflow.py
src/vibecollab/domain/: __init__.py  conflict_detector.py  (+12 more)
src/vibecollab_dashboard/: __init__.py  workflow_panel.py  workflow_snapshot.py  workflow_validator.py
templates/: default.project.yaml
templates/domains/: data.extension.yaml  web.extension.yaml
test-project-1696446371/: CONTRIBUTING_AI.md  llms.txt  project.yaml
test-project-1696446371/docs/: CHANGELOG.md  CONTEXT.md  DECISIONS.md  QA_TEST_CASES.md  ROADMAP.md
tests/: __init__.py  test_adapters.py  test_agent_executor.py  test_cli.py  test_cli_ai.py  test_cli_dev.py  test_cli_guide.py  test_cli_index.py  test_cli_insight.py  test_cli_lifecycle.py  test_cli_task_richtext.py  test_config_manager.py  test_conflict_detector.py  test_derivation_detector.py  test_developer.py  test_docs_renderer.py  test_embedder.py  test_event_log.py  test_execution_plan.py  test_extension.py  test_generator.py  test_git_utils.py  test_guard_engine.py  test_health.py  test_hook_manager.py  test_indexer.py  test_insight_collection.py  test_insight_manager.py  test_insight_quality.py  test_insight_signal.py  test_lifecycle.py  test_llm_client.py  test_llmstxt.py  test_mcp_server.py  test_mcp_server_closures.py  test_pattern_engine.py  test_permission_enforcement.py  test_pipeline.py  test_prd_manager.py  test_profile.py  (+18 more)
(+114 files in other folders)
